# jupyter-code-executor-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/jupyter_code_executor_mcp_server/: app.py  prompts.py  safe_notebook.py  session.py  session_manager.py
