[project]
name = "jupyter-code-executor-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.11"
dependencies = [
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    "click>=8.3.1",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.23.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "uv>=0.9.16",
]

[project.scripts]
jupyter-code-executor-mcp-server = "jupyter_code_executor_mcp_server.app:serve"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
