[project]
name = "jupyter-code-executor-mcp-server"
version = "0.1.0"
description = "Jupyter code executor mcp server"
readme = "README.md"
keywords = ["ai", "mcp", "jupyter-mcp", "code-executor", "mcp-server", "jupyter-code-executor-mcp-server"]

authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

requires-python = ">=3.11"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


dependencies = [
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    "click>=8.3.1",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.23.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "uv>=0.9.16",
]

[project.scripts]
jupyter-code-executor-mcp-server = "jupyter_code_executor_mcp_server.app:serve"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
